# rust-wasm-bindgen-test

./: Cargo.toml  README.md  index.html
src/: lib.rs
